Bug 1518487 - implement ColorContrast component to display a11y audit information for text color contrast. r=gl
MozReview-Commit-ID: DoOp2JhaQyD

Differential Revision: https://phabricator.services.mozilla.com/D19053

UltraBlame original commit: b8b41d21886624db60c4e12f2ddc66d681b02782

--- a/devtools/client/accessibility/accessibility.css
+++ b/devtools/client/accessibility/accessibility.css
@@ -104,6 +104,16 @@ padding
 -
 accessibility
 -
+horizontal
+-
+indent
+:
+14px
+;
+-
+-
+accessibility
+-
 properties
 -
 item
@@ -279,7 +289,7 @@ FFFFFFB3
 -
 accessible
 -
-role
+label
 -
 background
 -
@@ -291,7 +301,7 @@ white
 -
 accessible
 -
-role
+label
 -
 border
 -
@@ -304,7 +314,7 @@ CACAD1
 -
 accessible
 -
-role
+label
 -
 color
 :
@@ -453,7 +463,7 @@ FFF6
 -
 accessible
 -
-role
+label
 -
 background
 -
@@ -472,7 +482,7 @@ grey
 -
 accessible
 -
-role
+label
 -
 border
 -
@@ -491,7 +501,7 @@ grey
 -
 accessible
 -
-role
+label
 -
 color
 :
@@ -2680,7 +2690,7 @@ var
 -
 accessible
 -
-role
+label
 -
 background
 -
@@ -2695,7 +2705,7 @@ var
 -
 accessible
 -
-role
+label
 -
 color
 )
@@ -2710,7 +2720,7 @@ var
 -
 accessible
 -
-role
+label
 -
 border
 -
@@ -3164,5 +3174,912 @@ height
 -
 tall
 )
+;
+}
+.
+accessibility
+-
+color
+-
+contrast
+-
+check
+.
+accessibility
+-
+color
+-
+contrast
+{
+position
+:
+relative
+;
+display
+:
+flex
+;
+cursor
+:
+default
+;
+height
+:
+inherit
+;
+}
+.
+accessibility
+-
+color
+-
+contrast
+-
+check
+{
+flex
+-
+direction
+:
+column
+;
+padding
+:
+4px
+var
+(
+-
+-
+accessibility
+-
+horizontal
+-
+indent
+)
+;
+line
+-
+height
+:
+20px
+;
+}
+.
+accessibility
+-
+color
+-
+contrast
+{
+align
+-
+items
+:
+baseline
+;
+}
+.
+accessibility
+-
+color
+-
+contrast
+-
+header
+{
+margin
+:
+0
+;
+font
+-
+weight
+:
+bold
+;
+font
+-
+size
+:
+var
+(
+-
+-
+accessibility
+-
+font
+-
+size
+)
+;
+line
+-
+height
+:
+var
+(
+-
+-
+accessibility
+-
+toolbar
+-
+height
+)
+;
+}
+.
+accessibility
+-
+color
+-
+contrast
+-
+annotation
+{
+margin
+:
+0
+;
+white
+-
+space
+:
+normal
+;
+color
+:
+var
+(
+-
+-
+accessible
+-
+label
+-
+color
+)
+;
+}
+.
+accessibility
+-
+color
+-
+contrast
+-
+annotation
+.
+link
+{
+color
+:
+var
+(
+-
+-
+accessibility
+-
+link
+-
+color
+)
+;
+cursor
+:
+pointer
+;
+outline
+:
+0
+;
+white
+-
+space
+:
+nowrap
+;
+font
+-
+style
+:
+normal
+;
+}
+.
+accessibility
+-
+color
+-
+contrast
+-
+annotation
+.
+link
+:
+hover
+:
+not
+(
+:
+focus
+)
+{
+text
+-
+decoration
+:
+underline
+;
+}
+.
+accessibility
+-
+color
+-
+contrast
+-
+annotation
+.
+link
+:
+focus
+:
+not
+(
+:
+active
+)
+{
+box
+-
+shadow
+:
+0
+0
+0
+2px
+var
+(
+-
+-
+accessibility
+-
+toolbar
+-
+focus
+)
+0
+0
+0
+4px
+var
+(
+-
+-
+accessibility
+-
+toolbar
+-
+focus
+-
+alpha30
+)
+;
+border
+-
+radius
+:
+2px
+;
+}
+.
+accessibility
+-
+color
+-
+contrast
+-
+annotation
+.
+link
+:
+active
+{
+color
+:
+var
+(
+-
+-
+accessibility
+-
+link
+-
+color
+-
+active
+)
+;
+text
+-
+decoration
+:
+underline
+;
+}
+.
+accessibility
+-
+color
+-
+contrast
+-
+large
+-
+text
+{
+background
+-
+color
+:
+var
+(
+-
+-
+accessible
+-
+label
+-
+background
+-
+color
+)
+;
+color
+:
+var
+(
+-
+-
+accessible
+-
+label
+-
+color
+)
+;
+outline
+:
+1px
+solid
+var
+(
+-
+-
+accessible
+-
+label
+-
+border
+-
+color
+)
+;
+-
+moz
+-
+outline
+-
+radius
+:
+3px
+;
+padding
+:
+0px
+2px
+;
+margin
+-
+inline
+-
+start
+:
+6px
+;
+line
+-
+height
+:
+initial
+;
+}
+.
+accessibility
+-
+color
+-
+contrast
+.
+accessibility
+-
+contrast
+-
+value
+:
+not
+(
+:
+empty
+)
+{
+margin
+-
+block
+-
+end
+:
+4px
+;
+}
+.
+accessibility
+-
+color
+-
+contrast
+.
+accessibility
+-
+contrast
+-
+value
+:
+not
+(
+:
+empty
+)
+:
+before
+{
+content
+:
+"
+"
+;
+height
+:
+14px
+;
+width
+:
+14px
+;
+display
+:
+inline
+-
+flex
+;
+background
+-
+color
+:
+var
+(
+-
+-
+accessibility
+-
+contrast
+-
+color
+)
+;
+box
+-
+shadow
+:
+0
+0
+0
+1px
+var
+(
+-
+-
+grey
+-
+40
+)
+6px
+5px
+var
+(
+-
+-
+accessibility
+-
+contrast
+-
+bg
+)
+6px
+5px
+0
+1px
+var
+(
+-
+-
+grey
+-
+40
+)
+;
+margin
+-
+inline
+-
+end
+:
+11px
+;
+}
+.
+accessibility
+-
+color
+-
+contrast
+.
+accessibility
+-
+contrast
+-
+value
+:
+first
+-
+child
+:
+not
+(
+:
+empty
+)
+:
+before
+{
+margin
+-
+inline
+-
+start
+:
+1px
+;
+}
+.
+accessibility
+-
+color
+-
+contrast
+.
+accessibility
+-
+contrast
+-
+value
+:
+not
+(
+:
+first
+-
+child
+)
+:
+not
+(
+:
+empty
+)
+:
+before
+{
+margin
+-
+inline
+-
+start
+:
+4px
+;
+}
+.
+accessibility
+-
+color
+-
+contrast
+.
+accessibility
+-
+contrast
+-
+value
+:
+not
+(
+:
+empty
+)
+:
+after
+{
+margin
+-
+inline
+-
+start
+:
+4px
+;
+}
+.
+accessibility
+-
+color
+-
+contrast
+.
+accessibility
+-
+contrast
+-
+value
+:
+not
+(
+:
+empty
+)
+.
+AA
+:
+after
+.
+accessibility
+-
+color
+-
+contrast
+.
+accessibility
+-
+contrast
+-
+value
+:
+not
+(
+:
+empty
+)
+.
+AAA
+:
+after
+{
+color
+:
+var
+(
+-
+-
+theme
+-
+highlight
+-
+green
+)
+;
+}
+.
+accessibility
+-
+color
+-
+contrast
+.
+accessibility
+-
+contrast
+-
+value
+:
+not
+(
+:
+empty
+)
+.
+fail
+:
+after
+{
+color
+:
+#
+E57180
+;
+content
+:
+"
+"
+;
+}
+.
+accessibility
+-
+color
+-
+contrast
+.
+accessibility
+-
+contrast
+-
+value
+:
+not
+(
+:
+empty
+)
+.
+AA
+:
+after
+{
+content
+:
+"
+AA
+\
+2713
+"
+;
+}
+.
+accessibility
+-
+color
+-
+contrast
+.
+accessibility
+-
+contrast
+-
+value
+:
+not
+(
+:
+empty
+)
+.
+AAA
+:
+after
+{
+content
+:
+"
+AAA
+\
+2713
+"
+;
+}
+.
+accessibility
+-
+color
+-
+contrast
+.
+accessibility
+-
+color
+-
+contrast
+-
+label
+:
+after
+{
+content
+:
+"
+:
+"
+;
+}
+.
+accessibility
+-
+color
+-
+contrast
+.
+accessibility
+-
+color
+-
+contrast
+-
+label
+.
+accessibility
+-
+color
+-
+contrast
+.
+accessibility
+-
+color
+-
+contrast
+-
+separator
+:
+before
+{
+margin
+-
+inline
+-
+end
+:
+3px
+;
+}
+.
+accessibility
+-
+color
+-
+contrast
+.
+accessibility
+-
+color
+-
+contrast
+-
+separator
+:
+before
+{
+content
+:
+"
+-
+"
+;
+margin
+-
+inline
+-
+start
+:
+4px
 ;
 }
